Add header and start main

--- a/index.html
+++ b/index.html
@@ -8,18 +8,41 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <!-- Inizio header -->
     <header>
-
+        <div id="container-pattern">
+            <!-- <img src="img/pattern.png" alt="">
+            <img id="logo" src="./img/logo.svg" alt="logo di booleaner"> -->
+        </div>
+        <div>
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+            <section>
+                <h5>
+                    Scritto da The Booleaner
+                </h5>
+                <h6>
+                    il 10/10/2020
+                </h6>
+            </section>
+        </div>
     </header>
+    <!-- Fine header -->
 
+    <!-- Inizio main -->
     <main>
-
+        <div id="image-tim">
+            <img src="./img/tim-1.jpg" alt="first image of Tim">
+            <img src="./img/tim-2.jpg" alt="first image of Tim">
+        </div>
     </main>
 
+    <!-- Fine main -->
+
+    <!-- Inizio footer -->
     <footer>
 
     </footer>
+    <!-- Fine footer -->
 
 </body>
 </html>
