add final text, now have to change

--- a/index.html
+++ b/index.html
@@ -30,17 +30,90 @@
 
     <!-- Inizio main -->
     <main>
-        <div id="image-tim">
-            <img src="./img/tim-1.jpg" alt="first image of Tim">
-            <img src="./img/tim-2.jpg" alt="first image of Tim">
+        <div>
+            <div id="image-tim">
+                <img src="./img/tim-1.jpg" alt="first image of Tim">
+                <img src="./img/tim-2.jpg" alt="first image of Tim">
+            </div>
+            <div class="didascalie">
+                <p>
+                    Lorem ipsum dolor sit amet.
+                </p>
+            </div>
+            <div class="didascalie">
+                <p>
+                    Lorem ipsum dolor sit amet.
+                </p>
+            </div>
+            <div class="text">
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque, quibusdam earum sed tenetur nobis totam aliquam debitis? Animi, laborum nulla? Quisquam quaerat repudiandae similique sint alias sit officia! Fuga, repellendus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus sit vel nostrum at magni consequuntur sapiente. Tempora aperiam magnam dignissimos, perspiciatis sint exercitationem? 
+                </p>
+            </div>
+            <div class="text">
+                <ul>
+                    <li> Lorem ipsum dolor, sit amet consectetur adipisicing elit. </li>
+                    <li> Lorem ipsum dolor, sit amet consectetur adipisicing elit. </li>
+                    <li> Lorem ipsum dolor, sit amet consectetur adipisicing elit. </li>
+                </ul>
+            </div>
         </div>
-    </main>
 
+        <!-- Inizio tabella -->
+        <div id="table">
+            <table style="width:100%">
+                <thead>
+                    <div id="primarigha">
+                        <tr>
+                            <th style="width:25%">Lorem ipsum dolor1</th>
+                            <th style="width:25%">Lorem ipsum dolor2</th>
+                            <th style="width:50%">Lorem ipsum dolor3</th>
+                        </tr>
+                    </div>
+                </thead>
+                <tdody>
+                    <tr>
+                        <td style="width:25%">Lorem ipsum dolor</td>
+                        <td style="width:25%">Lorem ipsum dolor</td>
+                        <td style="width:50%">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam odio voluptas alias nihil? Officia assumenda minus illum sit quidem et rem. Quas amet pariatur eligendi et explicabo ut animi maiores!</td>
+                    </tr>
+                    <tr>
+                        <td style="width:25%">Lorem ipsum dolor</td>
+                        <td style="width:25%">Lorem ipsum dolor</td>
+                        <td style="width:50%">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam odio voluptas alias nihil? Officia assumenda minus illum sit quidem et rem. Quas amet pariatur eligendi et explicabo ut animi maiores!</td>
+                    </tr>
+                    <tr>
+                        <td style="width:25%">Lorem ipsum dolor</td>
+                        <td style="width:25%">Lorem ipsum dolor</td>
+                        <td style="width:50%">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam odio voluptas alias nihil? Officia assumenda minus illum sit quidem et rem. Quas amet pariatur eligendi et explicabo ut animi maiores!</td>
+                    </tr>
+                </tdody>
+            </table>
+        </div>
+        <!-- Fine tabella -->
+
+        <div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque sed odit magnam, facilis velit nihil doloribus vel totam. Incidunt, odit. Eligendi ad dolorem vero aliquam iure molestiae amet facilis vitae? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus natus voluptate porro dolore nam voluptatibus perspiciatis, adipisci possimus eligendi voluptates aliquam molestiae illum pariatur eaque deserunt! Hic tempora nostrum vero.
+            </p>
+        </div>
+
+    </main>
     <!-- Fine main -->
 
     <!-- Inizio footer -->
     <footer>
-
+        <div>
+            <section>
+                <h6>Potrebbero interessarti</h6>
+            </section>
+        </div>
+        <div>
+            <img src="./img/monitor.jpg" alt="immagine di un monitor">
+        </div>
+        <div>
+            <img src="./img/graph.jpg" alt="immagine di una grafica">
+        </div>
     </footer>
     <!-- Fine footer -->
 
