add modifiche, ora completare

--- a/index.html
+++ b/index.html
@@ -10,26 +10,33 @@
 <body>
     <!-- Inizio header -->
     <header>
+        
+        <!-- Barra superiore -->
         <div id="container-pattern">
             <!-- <img src="img/pattern.png" alt="">
             <img id="logo" src="./img/logo.svg" alt="logo di booleaner"> -->
         </div>
+
+        <!-- Titolo -->
         <div>
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
             <section>
-                <h5>
-                    Scritto da The Booleaner
-                </h5>
-                <h6>
-                    il 10/10/2020
-                </h6>
+                <div id="smalltext">
+                    <h5>
+                        Scritto da <span style="color:#24aae5">The Booleaner</span>
+                    </h5>
+                    <h6>
+                        il 10/10/2020
+                    </h6>
+                </div>
             </section>
         </div>
+
     </header>
-    <!-- Fine header -->
 
     <!-- Inizio main -->
     <main>
+
         <div>
             <div id="image-tim">
                 <img src="./img/tim-1.jpg" alt="first image of Tim">
@@ -47,7 +54,7 @@
             </div>
             <div class="text">
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque, quibusdam earum sed tenetur nobis totam aliquam debitis? Animi, laborum nulla? Quisquam quaerat repudiandae similique sint alias sit officia! Fuga, repellendus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus sit vel nostrum at magni consequuntur sapiente. Tempora aperiam magnam dignissimos, perspiciatis sint exercitationem? 
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque, quibusdam earum sed tenetur nobis totam aliquam debitis? Animi, laborum nulla? <span style="background-color: yellow;"> Quisquam quaerat repudiandae similique sint alias sit officia! </span>  Fuga, repellendus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus sit vel nostrum at magni consequuntur sapiente. Tempora aperiam magnam dignissimos, perspiciatis sint exercitationem? 
                 </p>
             </div>
             <div class="text">
@@ -92,30 +99,31 @@
         </div>
         <!-- Fine tabella -->
 
-        <div>
+        <div id="spacetext">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque sed odit magnam, facilis velit nihil doloribus vel totam. Incidunt, odit. Eligendi ad dolorem vero aliquam iure molestiae amet facilis vitae? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus natus voluptate porro dolore nam voluptatibus perspiciatis, adipisci possimus eligendi voluptates aliquam molestiae illum pariatur eaque deserunt! Hic tempora nostrum vero.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque sed odit magnam, facilis velit nihil doloribus vel totam. Incidunt, odit. Eligendi ad dolorem vero aliquam iure molestiae amet facilis vitae? Lorem ipsum dolor sit amet consectetur, adipisicing elit. <span style="background-color: yellow;"> Quisquam quaerat repudiandae similique sint alias sit officia! </span> Ducimus natus voluptate porro dolore nam voluptatibus perspiciatis, adipisci possimus eligendi voluptates aliquam molestiae illum pariatur eaque deserunt! Hic tempora nostrum vero.
             </p>
         </div>
 
     </main>
-    <!-- Fine main -->
 
     <!-- Inizio footer -->
     <footer>
         <div>
-            <section>
-                <h6>Potrebbero interessarti</h6>
+            <section style="color: #a2a2a2;">
+                <h5 style="margin-top: 20px;" >Potrebbero interessarti</h5>
             </section>
         </div>
-        <div>
-            <img src="./img/monitor.jpg" alt="immagine di un monitor">
-        </div>
-        <div>
-            <img src="./img/graph.jpg" alt="immagine di una grafica">
+
+        <div class="imagefooter">
+            <div>
+                <img style="margin-top: 5px;" src="./img/monitor.jpg" alt="immagine di un monitor">
+            </div>
+            <div>
+                <img src="./img/graph.jpg" alt="immagine di una grafica">
+            </div>
         </div>
     </footer>
-    <!-- Fine footer -->
 
 </body>
 </html>
