add file last setting

--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 <body>
     <!-- Inizio header -->
     <header>
-        
-        <!-- Barra superiore -->
-        <div id="container-pattern">
-            <!-- <img src="img/pattern.png" alt="">
-            <img id="logo" src="./img/logo.svg" alt="logo di booleaner"> -->
+        <!-- Barra superiore, non sono riuscito a inserire l'immagine-->
+        <div id="container">
+            <img id="logo" src="./img/logo.svg" alt="logo di Booleaner">               
         </div>
 
         <!-- Titolo -->
@@ -42,22 +40,24 @@
                 <img src="./img/tim-1.jpg" alt="first image of Tim">
                 <img src="./img/tim-2.jpg" alt="first image of Tim">
             </div>
+
             <div class="didascalie">
                 <p>
-                    Lorem ipsum dolor sit amet.
+                    Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.
                 </p>
             </div>
             <div class="didascalie">
                 <p>
-                    Lorem ipsum dolor sit amet.
+                    Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.
                 </p>
             </div>
-            <div class="text">
+
+            <div class="firsttext">
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque, quibusdam earum sed tenetur nobis totam aliquam debitis? Animi, laborum nulla? <span style="background-color: yellow;"> Quisquam quaerat repudiandae similique sint alias sit officia! </span>  Fuga, repellendus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus sit vel nostrum at magni consequuntur sapiente. Tempora aperiam magnam dignissimos, perspiciatis sint exercitationem? 
                 </p>
             </div>
-            <div class="text">
+            <div class="ol-text">
                 <ul>
                     <li> Lorem ipsum dolor, sit amet consectetur adipisicing elit. </li>
                     <li> Lorem ipsum dolor, sit amet consectetur adipisicing elit. </li>
@@ -67,34 +67,32 @@
         </div>
 
         <!-- Inizio tabella -->
-        <div id="table">
-            <table style="width:100%">
+        <div style="margin-top: 60px">
+            <table id="table">
                 <thead>
-                    <div id="primarigha">
-                        <tr>
-                            <th style="width:25%">Lorem ipsum dolor1</th>
-                            <th style="width:25%">Lorem ipsum dolor2</th>
-                            <th style="width:50%">Lorem ipsum dolor3</th>
-                        </tr>
-                    </div>
+                    <tr style="background: #24aae5;">
+                        <th style="width:25%">Lorem ipsum dolor1</th>
+                        <th style="width:25%">Lorem ipsum dolor2</th>
+                        <th style="width:50%">Lorem ipsum dolor3</th>
+                    </tr>
                 </thead>
-                <tdody>
-                    <tr>
-                        <td style="width:25%">Lorem ipsum dolor</td>
-                        <td style="width:25%">Lorem ipsum dolor</td>
-                        <td style="width:50%">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam odio voluptas alias nihil? Officia assumenda minus illum sit quidem et rem. Quas amet pariatur eligendi et explicabo ut animi maiores!</td>
+                <tbody>
+                    <tr style="background: #b1e5f2;">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam odio voluptas alias nihil? Officia assumenda minus illum sit quidem et rem. Quas amet pariatur eligendi et explicabo ut animi maiores!</td>
                     </tr>
                     <tr>
-                        <td style="width:25%">Lorem ipsum dolor</td>
-                        <td style="width:25%">Lorem ipsum dolor</td>
-                        <td style="width:50%">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam odio voluptas alias nihil? Officia assumenda minus illum sit quidem et rem. Quas amet pariatur eligendi et explicabo ut animi maiores!</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam odio voluptas alias nihil? Officia assumenda minus illum sit quidem et rem. Quas amet pariatur eligendi et explicabo ut animi maiores!</td>
                     </tr>
-                    <tr>
-                        <td style="width:25%">Lorem ipsum dolor</td>
-                        <td style="width:25%">Lorem ipsum dolor</td>
-                        <td style="width:50%">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam odio voluptas alias nihil? Officia assumenda minus illum sit quidem et rem. Quas amet pariatur eligendi et explicabo ut animi maiores!</td>
+                    <tr style="background: #b1e5f2;">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam odio voluptas alias nihil? Officia assumenda minus illum sit quidem et rem. Quas amet pariatur eligendi et explicabo ut animi maiores!</td>
                     </tr>
-                </tdody>
+                </tbody>
             </table>
         </div>
         <!-- Fine tabella -->
@@ -111,18 +109,24 @@
     <footer>
         <div>
             <section style="color: #a2a2a2;">
-                <h5 style="margin-top: 20px;" >Potrebbero interessarti</h5>
+                <h4 style="margin-top: 30px;" >Potrebbero interessarti</h4>
             </section>
         </div>
 
-        <div class="imagefooter">
-            <div>
-                <img style="margin-top: 5px;" src="./img/monitor.jpg" alt="immagine di un monitor">
+
+            <div class="img-footer1">
+                <div id="img1" >
+                    <h3>Lorem ipsum dolor</h3>
+                </div>
             </div>
-            <div>
-                <img src="./img/graph.jpg" alt="immagine di una grafica">
+            <div class="img-footer1">
+                <div id="img2" >
+                    <h3>Lorem ipsum dolor</h3>
+                </div>
             </div>
-        </div>
+            
+
+
     </footer>
 
 </body>
