--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
 
             <div class="img-footer1">
                 <div id="img1" >
-                    <h3>Lorem ipsum dolor</h3>
+                    <h3 style="color: white">Lorem ipsum dolor</h3>
                 </div>
             </div>
             <div class="img-footer1">
                 <div id="img2" >
-                    <h3>Lorem ipsum dolor</h3>
+                    <h3 style="color: white">Lorem ipsum dolor</h3>
                 </div>
             </div>
             
